--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@ body {font-family: "Montserrat", sans-serif}
 
   <!-- Automatic Slideshow Images -->
   <div class="mySlides w3-display-container w3-center">
-    <img src="/images/soccer.png" style="width:10%">
+    <img src="/images/soccer.png" style="width:50%">
     <div class="w3-display-bottommiddle w3-container w3-text-black w3-padding-32">
+      <!-- <h1>Foot And Ball Academy</h1> -->
       <h1>Foot And Ball Academy</h1>
       <p><b>We like football!</b></p>   
     </div>
