--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body {font-family: "Montserrat", sans-serif}
 
   <!-- Automatic Slideshow Images -->
   <div class="mySlides w3-display-container w3-center">
-    <img src="/images/soccer.png" style="width:50%">
+    <img src="./images/soccer.png" style="width:50%">
     <div class="w3-display-bottommiddle w3-container w3-text-black w3-padding-32">
       <!-- <h1>Foot And Ball Academy</h1> -->
       <h1>Foot And Ball Academy</h1>
@@ -54,15 +54,15 @@ body {font-family: "Montserrat", sans-serif}
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p>Chief Hacker: Nate</p>
-        <img src="/images/nate.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <img src="./images/nate.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
       </div>
       <div class="w3-third">
         <p>Head Trainer: Nick</p>
-        <img src="/images/nick.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <img src="./images/nick.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
       </div>
       <div class="w3-third">
         <p>MVP: Avalon</p>
-        <img src="/images/av.png" class="w3-round" alt="Random Name" style="width:60%">
+        <img src="./images/av.png" class="w3-round" alt="Random Name" style="width:60%">
       </div>
     </div>
   </div>
