--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {font-family: "Montserrat", sans-serif}
 
 <!-- Navbar -->
 <div class="w3-top">
-  <div class="w3-bar w3-black w3-card">
+  <div class="w3-bar w3-blue w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="#register" class="w3-bar-item w3-button w3-padding-large w3-hide-small">REGISTER</a>
@@ -25,11 +25,10 @@ body {font-family: "Montserrat", sans-serif}
 </div>
 
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">FOOTANDBALL</a>
-  <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">REGISTER</a>
+<div id="navDemo" class="w3-bar-block w3-blue w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+  <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">FOOTANDBALL</a>
+  <a href="#register" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">REGISTER</a>
   <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
 </div>
 
 <!-- Page content -->
@@ -37,7 +36,7 @@ body {font-family: "Montserrat", sans-serif}
 
   <!-- Automatic Slideshow Images -->
   <div class="mySlides w3-display-container w3-center">
-    <img src="./footandball/images/soccer.png" style="width:50%">
+    <img src="./images/grass.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-black w3-padding-32">
       <!-- <h1>Foot And Ball Academy</h1> -->
       <h1>Foot And Ball Academy</h1>
@@ -54,23 +53,23 @@ body {font-family: "Montserrat", sans-serif}
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p>Chief Hacker: Nate</p>
-        <img src="./footandball/images/nate.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <img src="./images/nate.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
       </div>
       <div class="w3-third">
         <p>Head Trainer: Nick</p>
-        <img src="./footandball/images/nick.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <img src="./images/nick.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
       </div>
       <div class="w3-third">
         <p>MVP: Avalon</p>
-        <img src="./footandball/images/av.png" class="w3-round" alt="Random Name" style="width:60%">
+        <img src="./images/av.png" class="w3-round" alt="Random Name" style="width:60%">
       </div>
     </div>
   </div>
 
   <!-- The Tour Section -->
-  <div class="w3-black" id="tour">
+  <div class="w3-blue" id="register">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">TOUR DATES</h2>
+      <h2 class="w3-wide w3-center">Sign up today</h2>
       
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
@@ -88,23 +87,9 @@ body {font-family: "Montserrat", sans-serif}
     <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
     <div class="w3-row w3-padding-32">
       <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker" style="width:30px"></i> Chicago, US<br>
-        <i class="fa fa-phone" style="width:30px"></i> Phone: +00 151515<br>
-        <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>
-      </div>
-      <div class="w3-col m6">
-        <form action="/action_page.php" target="_blank">
-          <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-            </div>
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-            </div>
-          </div>
-          <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-          <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
-        </form>
+        <i class="fa fa-map-marker" style="width:30px"></i> Richmond, NSW<br>
+        <i class="fa fa-phone" style="width:30px"></i> Phone: +61 452 583 279<br>
+        <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@footandball.com.au<br>
       </div>
     </div>
   </div>
@@ -113,7 +98,7 @@ body {font-family: "Montserrat", sans-serif}
 </div>
 
 <!-- Image of location/map -->
-<img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
+<!-- <img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%"> -->
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
