--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {font-family: "Montserrat", sans-serif}
 
   <!-- Automatic Slideshow Images -->
   <div class="mySlides w3-display-container w3-center">
-    <img src="./images/grass.jpg" style="width:100%">
+    <img src="./images/grass_banner.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-black w3-padding-32">
       <!-- <h1>Foot And Ball Academy</h1> -->
       <h1>Foot And Ball Academy</h1>
@@ -70,6 +70,8 @@ body {font-family: "Montserrat", sans-serif}
   <div class="w3-blue" id="register">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">Sign up today</h2>
+
+      <img src="./images/corner.jpg" class="w3-round w3-margin-bottom" alt="Advanced technical training" style="width:50%">
       
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
@@ -84,6 +86,7 @@ body {font-family: "Montserrat", sans-serif}
   <!-- The Contact Section -->
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
     <h2 class="w3-wide w3-center">CONTACT</h2>
+    <img src="./images/child.jpg" class="w3-round w3-margin-bottom" alt="Active kids are smart kids" style="width:50%">
     <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
     <div class="w3-row w3-padding-32">
       <div class="w3-col m6 w3-large w3-margin-bottom">
