--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>W3.CSS Template</title>
+<title>Foot and Ball Academy</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -26,7 +26,7 @@ body {font-family: "Montserrat", sans-serif}
 
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="w3-bar-block w3-blue w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">FOOTANDBALL</a>
+  <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">HOME</a>
   <a href="#register" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">REGISTER</a>
   <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
 </div>
@@ -39,7 +39,7 @@ body {font-family: "Montserrat", sans-serif}
     <img src="./images/grass_banner.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-black w3-padding-32">
       <!-- <h1>Foot And Ball Academy</h1> -->
-      <h1>Foot And Ball Academy</h1>
+      <h1>Foot and Ball Academy</h1>
       <p><b>We like football!</b></p>   
     </div>
   </div>
@@ -67,14 +67,14 @@ body {font-family: "Montserrat", sans-serif}
   </div>
 
   <!-- The Tour Section -->
-  <div class="w3-blue" id="register">
+  <div class="w3-blue w3-center" id="register">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">Sign up today</h2>
 
       <img src="./images/corner.jpg" class="w3-round w3-margin-bottom" alt="Advanced technical training" style="width:50%">
       
 
-      <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+      <div class="w3-row-padding w3-padding-32">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeRvlnhiPkzMuL6IVzWFk27NQrQ-XeQI1GzXWZ_3tCsFrfLFA/viewform?embedded=true" width="640" height="1400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
       </div>
@@ -84,7 +84,7 @@ body {font-family: "Montserrat", sans-serif}
   
 
   <!-- The Contact Section -->
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
+  <div class="w3-container w3-center w3-content w3-padding-64" style="max-width:800px" id="contact">
     <h2 class="w3-wide w3-center">CONTACT</h2>
     <img src="./images/child.jpg" class="w3-round w3-margin-bottom" alt="Active kids are smart kids" style="width:50%">
     <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
