--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ body {font-family: "Montserrat", sans-serif}
     <h2 class="w3-wide w3-center">CONTACT</h2>
     <img src="./images/child.jpg" class="w3-round w3-margin-bottom" alt="Active kids are smart kids" style="width:50%">
     <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
-    <div class="w3-row w3-padding-32">
+    <div class="w3-row w3-padding-32 w3-left">
       <div class="w3-col m6 w3-large w3-margin-bottom">
         <i class="fa fa-map-marker" style="width:30px"></i> Richmond, NSW<br>
         <i class="fa fa-phone" style="width:30px"></i> Phone: +61 452 583 279<br>
