--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="icon" href="favicon.ico">
+<link rel="icon" href="./images/favicon-32x32.png">
 <style>
 body {font-family: "Montserrat", sans-serif}
 .mySlides {display: none}
@@ -89,8 +89,8 @@ body {font-family: "Montserrat", sans-serif}
     <h2 class="w3-wide w3-center">CONTACT</h2>
     <img src="./images/child.jpg" class="w3-round w3-margin-bottom" alt="Active kids are smart kids" style="width:50%">
     <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
-    <div class="w3-row w3-padding-32 w3-left">
-      <div class="w3-col m6 w3-large w3-margin-bottom">
+    <div class="w3-row w3-center w3-padding-32">
+      <div class="w3-col w3-left-align w3-large w3-margin-bottom">
         <i class="fa fa-map-marker" style="width:30px"></i> Richmond, NSW<br>
         <i class="fa fa-phone" style="width:30px"></i> Phone: +61 452 583 279<br>
         <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@footandball.com.au<br>
