--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="icon" href="./images/favicon-32x32.png">
+<link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+<link rel="manifest" href="./images/site.webmanifest">
 <style>
 body {font-family: "Montserrat", sans-serif}
 .mySlides {display: none}
@@ -27,7 +30,7 @@ body {font-family: "Montserrat", sans-serif}
 
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="w3-bar-block w3-blue w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">HOME</a>
+  <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Foot and Ball Academy</a>
   <a href="#register" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">REGISTER</a>
   <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
 </div>
@@ -38,10 +41,10 @@ body {font-family: "Montserrat", sans-serif}
   <!-- Automatic Slideshow Images -->
   <div class="mySlides w3-display-container w3-center">
     <img src="./images/grass_banner.jpg" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-black w3-padding-32">
+    <div class="w3-display-bottommiddle w3-container w3-text-black w3-padding-32 w3-hide-small">
       <!-- <h1>Foot And Ball Academy</h1> -->
       <h1>Foot and Ball Academy</h1>
-      <p><b>We like football!</b></p>   
+      <p><b>We like football.</b></p>   
     </div>
   </div>
 
@@ -52,18 +55,30 @@ body {font-family: "Montserrat", sans-serif}
     <p class="w3-opacity"><i>We like to teach soccer</i></p>
     <p class="w3-justify">Soccer, football, whatever. Let's play</p>
     <div class="w3-row w3-padding-32">
-      <div class="w3-third">
+      <!-- <div class="w3-third">
         <p>Chief Hacker: Nate</p>
         <img src="./images/nate.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-      </div>
-      <div class="w3-third">
+      </div> -->
+      <div class="w3-center">
         <p>Head Trainer: Nick</p>
         <img src="./images/nick.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <p>
+        A beautiful man and wonderful coach. He will yell at your kids with just the right amount of enthusiasm. 30 years of playing experience including representive experience in England. Captain of Madsen Magic.
+      </p>
+
+      <p>Fully certified</p>
+      
+<ul class="a">
+  <li href="./images/Barnett-Moore_WWCC_2022.pdf">Working With Children Check</li>
+  <li href="./images/Barnett-Moore_PoliceCheck_2022.pdf">NSW Police Check</li>
+  <li href="./images/Barnett-Moore_MiniRoos_Cert.pdf">Miniroos Training Qualification</li>
+</ul>
+
       </div>
-      <div class="w3-third">
+      <!-- <div class="w3-third">
         <p>MVP: Avalon</p>
         <img src="./images/av.png" class="w3-round" alt="Random Name" style="width:60%">
-      </div>
+      </div> -->
     </div>
   </div>
 
@@ -73,7 +88,6 @@ body {font-family: "Montserrat", sans-serif}
       <h2 class="w3-wide w3-center">Sign up today</h2>
 
       <img src="./images/corner.jpg" class="w3-round w3-margin-bottom" alt="Advanced technical training" style="width:50%">
-      
 
       <div class="w3-row-padding w3-padding-32">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeRvlnhiPkzMuL6IVzWFk27NQrQ-XeQI1GzXWZ_3tCsFrfLFA/viewform?embedded=true" width="640" height="1400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
