--- a/index.html
+++ b/index.html
@@ -61,18 +61,19 @@ body {font-family: "Montserrat", sans-serif}
       </div> -->
       <div class="w3-center">
         <p>Head Trainer: Nick</p>
-        <img src="./images/nick.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <img src="./images/nick.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
         <p>
         A beautiful man and wonderful coach. He will yell at your kids with just the right amount of enthusiasm. 30 years of playing experience including representive experience in England. Captain of Madsen Magic.
       </p>
 
       <p>Fully certified</p>
-      
+      <div class="w3-left-align">
 <ul class="a">
   <li href="./images/Barnett-Moore_WWCC_2022.pdf">Working With Children Check</li>
   <li href="./images/Barnett-Moore_PoliceCheck_2022.pdf">NSW Police Check</li>
   <li href="./images/Barnett-Moore_MiniRoos_Cert.pdf">Miniroos Training Qualification</li>
 </ul>
+</div>
 
       </div>
       <!-- <div class="w3-third">
@@ -90,7 +91,7 @@ body {font-family: "Montserrat", sans-serif}
       <img src="./images/corner.jpg" class="w3-round w3-margin-bottom" alt="Advanced technical training" style="width:50%">
 
       <div class="w3-row-padding w3-padding-32">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeRvlnhiPkzMuL6IVzWFk27NQrQ-XeQI1GzXWZ_3tCsFrfLFA/viewform?embedded=true" width="640" height="1400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeRvlnhiPkzMuL6IVzWFk27NQrQ-XeQI1GzXWZ_3tCsFrfLFA/viewform?embedded=true" width="80%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
       </div>
     </div>
