--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@ body {font-family: "Montserrat", sans-serif}
       <p>Fully certified</p>
       <div class="w3-left-align">
 <ul class="a">
-  <li href="./images/Barnett-Moore_WWCC_2022.pdf">Working With Children Check</li>
-  <li href="./images/Barnett-Moore_PoliceCheck_2022.pdf">NSW Police Check</li>
-  <li href="./images/Barnett-Moore_MiniRoos_Cert.pdf">Miniroos Training Qualification</li>
+  <li><a href="./images/Barnett-Moore_WWCC_2022.pdf">Working With Children Check </a></li>
+  <li><a href="./images/Barnett-Moore_PoliceCheck_2022.pdf">NSW Police Check</a></li>
+  <li> <a href="./images/Barnett-Moore_MiniRoos_Cert.pdf">Miniroos Training Qualification</a></li>
 </ul>
 </div>
 
@@ -91,7 +91,7 @@ body {font-family: "Montserrat", sans-serif}
       <img src="./images/corner.jpg" class="w3-round w3-margin-bottom" alt="Advanced technical training" style="width:50%">
 
       <div class="w3-row-padding w3-padding-32">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeRvlnhiPkzMuL6IVzWFk27NQrQ-XeQI1GzXWZ_3tCsFrfLFA/viewform?embedded=true" width="80%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeRvlnhiPkzMuL6IVzWFk27NQrQ-XeQI1GzXWZ_3tCsFrfLFA/viewform?embedded=true" width="80%" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
       </div>
     </div>
