--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
     <div class="w3-bar w3-blue w3-card">
       <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)"
         onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-large">Foot and Ball Academy</a>
-      <a href="#register" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Register</a>
-      <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
+      <a href="#" class="w3-bar-item w3-button w3-padding-large">Home</a>
+      <a href="#Programs" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Programs</a>
+      <a href="#About" class="w3-bar-item w3-button w3-padding-large w3-hide-small">About Us</a>
+      <a href="#News" class="w3-bar-item w3-button w3-padding-large w3-hide-small">News</a>
+      <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact Us</a>
     </div>
   </div>
 
