--- a/index.html
+++ b/index.html
@@ -30,9 +30,31 @@
     <div class="w3-bar w3-blue w3-card">
       <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)"
         onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-large">Foot and Ball Academy</a>
-      <a href="#register" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Register</a>
-      <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
+      <a href="#" class="w3-bar-item w3-button w3-padding-large">Home</a>
+
+      <div class="w3-dropdown-hover w3-hide-small">
+        <button class="w3-padding-large w3-button" title="More">Programs <i class="fa fa-caret-down"></i></button>     
+        <div class="w3-dropdown-content w3-bar-block w3-card-4">
+          <a href="#" class="w3-bar-item w3-button">School terms</a>
+          <a href="#" class="w3-bar-item w3-button">Private sessions </a>
+          <a href="#" class="w3-bar-item w3-button">Register now</a>
+        </div>
+      </div>
+     
+      <div class="w3-dropdown-hover w3-hide-small">
+        <button class="w3-padding-large w3-button" title="More">About Us <i class="fa fa-caret-down"></i></button>     
+        <div class="w3-dropdown-content w3-bar-block w3-card-4">
+          <a href="#" class="w3-bar-item w3-button">Location</a>
+          <a href="#" class="w3-bar-item w3-button">Our Philosophy </a>
+          <a href="#" class="w3-bar-item w3-button">Staff</a>
+        </div>
+      </div>
+
+      <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">News</a>
+      <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact Us</a>
+      <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Terms and Conditions</a>
+
+      <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right">Register now</i></a>
     </div>
   </div>
 
@@ -48,12 +70,13 @@
 
     <!-- Automatic Slideshow Images -->
     <div class="mySlides w3-display-container w3-center">
-      <img src="./images/grass_banner.jpg" style="width:100%">
-      <div class="w3-display-bottommiddle w3-container w3-text-black w3-padding-32 w3-hide-small">
+      <img src="./images/logo.png" style="width:50%">
+      <!-- <img src="./images/grass_banner.jpg" style="width:100%"> -->
+      <!-- <div class="w3-display-bottommiddle w3-container w3-text-black w3-padding-32 w3-hide-small"> -->
         <!-- <h1>Foot And Ball Academy</h1> -->
-        <h1>Foot and Ball Academy</h1>
-        <p><b>We like football.</b></p>
-      </div>
+        <!-- <h1>Foot and Ball Academy</h1> -->
+        <!-- <p><b>We like football.</b></p> -->
+      <!-- </div> -->
     </div>
 
 
