--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="w3-bar w3-blue w3-card">
       <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)"
         onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-large">Home</a>
+      <a href="" class="w3-bar-item w3-button w3-padding-large">Home</a>
 
       <div class="w3-dropdown-hover w3-hide-small">
         <button class="w3-padding-large w3-button" title="More">Programs <i class="fa fa-caret-down"></i></button>     
