--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/uikit.min.css">
 	<link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.css">
-	<title>Glozzome</title>
+	<title>Foot and Ball Academy</title>
 </head>
 
 <body>
@@ -61,6 +61,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="TOS.html">Terms and Conditions</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" style="text-shadow: 2px 2px 2px #08e0f8;" href="RegisterNow.html"><b>Register Now</b></a>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -80,48 +83,36 @@
 				<div class="carousel-item crs-img-1 active">
 					<div class="container">
 						<div class="carousel-caption pb-5 mb-5 text-left">
-							<h2 class="display-4 text-light">Heading One</h2>
+							<h2 class="display-4 text-light">School Terms</h2>
 							<p class="lead">
 								Lorem ipsum ut do dolor excepteur adipisicing et minim consectetur <br>elit laborum quis
 								nostrud eiusmod.
 							</p>
-							<a href="#" class="btn btn-success">See More</a>
+							<a href="SchoolTerms.html" class="btn btn-success">Read More</a>
 						</div>
 					</div>
 				</div>
 				<div class="carousel-item crs-img-2">
 					<div class="container">
 						<div class="carousel-caption mb-5 text-center">
-							<h2 class="display-4 text-light">Heading Two</h2>
+							<h2 class="display-4 text-light">Private Sessions</h2>
 							<p>
 								Lorem ipsum ut do dolor excepteur adipisicing et minim consectetur elit laborum quis
 								nostrud eiusmod.
 							</p>
-							<a href="#" class="btn btn-warning">Read More</a>
+							<a href="PrivateSessions.hmtl" class="btn btn-warning">Read More</a>
 						</div>
 					</div>
 				</div>
 				<div class="carousel-item crs-img-3">
 					<div class="container">
 						<div class="carousel-caption pb-5 mb-5 text-right">
-							<h2 class="display-4 text-light">Heading Three</h2>
+							<h2 class="display-4 text-light">Register Now</h2>
 							<p>
 								Lorem ipsum ut do dolor excepteur adipisicing et minim <br>consectetur elit laborum quis
 								nostrud eiusmod.
 							</p>
-							<a href="#" class="btn btn-info">Learn More</a>
-						</div>
-					</div>
-				</div>
-				<div class="carousel-item crs-img-4">
-					<div class="container">
-						<div class="carousel-caption pb-5 mb-5 text-left">
-							<h2 class="display-4 text-light">Heading Four</h2>
-							<p>
-								Lorem ipsum ut do dolor excepteur adipisicing et minim consectetur elit <br>laborum quis
-								nostrud eiusmod.
-							</p>
-							<a href="#" class="btn btn-success">Read More</a>
+							<a href="RegisterNow.html" class="btn btn-info">Join the Program</a>
 						</div>
 					</div>
 				</div>
