--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<title>Glozzome</title>
+
 	<meta charset="utf-8">
-	<meta name="viewport" content="width:device-width; initial-scale=1.0">
+	<meta name="viewport" content="width=device-width; initial-scale=1.0">
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="css/uikit.min.css"> 
+	<link rel="stylesheet" type="text/css" href="css/uikit.min.css">
 	<link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.css">
-
+	<title>Foot and Ball Academy</title>
 </head>
+
 <body>
 
-		<!-- Navbar Section Start -->
-		<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4274AD;"
+	<!-- Navbar Section Start -->
+	<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4274AD;"
 		uk-sticky="top:100; animation: uk-animation-slide-top; bottom: #sticky-on-scroll-up">
 		<div class="container">
 			<a href="index.html" class="navbar-brand">
-				<img src="./img/logo.png" class="img-fluid p-0" style="height: 40px; ">
+				<img src="./img/logo-long.png" class="img-fluid p-0" style="height: 40px; ">
 				<!-- <div class="ml-2 p-0 d-inline webT">Glozzome</div> -->
 			</a>
 			<button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navBar">
@@ -45,7 +47,7 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="Location.html">Location</a>
-							<a class="dropdown-item" href="OurPhilosopy.html">Our Philosophy</a>
+							<a class="dropdown-item" href="OurPhilosophy.html">Our Philosophy</a>
 							<a class="dropdown-item" href="Staff.html">Staff</a>
 						</div>
 					</li>
@@ -59,22 +61,28 @@
 					<li class="nav-item">
 						<a class="nav-link" href="TOS.html">Terms and Conditions</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" style="text-shadow: 2px 2px 2px #08e0f8;" href="RegisterNow.html"><b>Register Now</b></a>
+					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 	<!-- Nav Section End -->
 
-	
+
 	<!-- About Section Start -->
-	<section id="about"   class="text-center py-5 text-light">
+	<section id="about" class="text-center py-5 text-light">
 		<div class="inner-overlay">
 			<div class="container">
 				<div class="row">
 					<div class="col mt-5 pt-4">
-						<h1 class="text-light">About Us</h1 >
+						<h1 class="text-light">Our Philosophy</h1>
 						<p class="lead">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, saepe.
+							At Foot and Ball Academy, our primary goal is to help players develop a sustainable desire to
+							participate in the World Game, we know as football. We endeavour to create a healthy
+							environment, where players are taught to understand and then handle the competitive aspects of
+							the game, in the hopes they continue to play well into their adult lives.
 						</p>
 					</div>
 				</div>
@@ -88,132 +96,230 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-6  align-self-center">
-					<h1>What We Do</h1>
 					<p class="lead">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ex quaerat magnam obcaecati repellendus voluptatum quisquam architecto iure, aliquam labore.
+						From ages ~5 – 12, Foot and Ball Academy sessions maintain <strong>a principal focus on the 1 v
+							1 duel.</strong>
+						That is, we structure our sessions on primarily improving this area of a player’s game. This is
+						motivated by our CORE Philosophy, which follows a popularised philosophy utilised in elite parts
+						of
+						Europe (not our own):
 					</p>
+
 					<p class="lead">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ex quaerat magnam obcaecati repellendus voluptatum quisquam architecto iure, aliquam labore.
+						<em>“Improving the individual player, improves the overall team.”</em> That is, we strive to
+						improve the
+						technical and mental aspects of an individual player, irrespective of their level.
 					</p>
+
 				</div>
 				<div class="col-lg-6 col-md-6 align-self-center text-center">
-					<img src="img/about/info.jpg" 
-					class="img-fluid w-50 h-70 rounded-circle">
+					<img src="img/kids3.jpg" class="img-fluid w-50 h-70 ">
 				</div>
 			</div>
 		</div>
 	</section>
 	<!-- About Info Section End -->
 
-	<!-- About Services Section Start -->
-	<section id="about-services" class="py-5 text-light
-	text-center bg-dark">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-4 col-md-4">
-				<div class="card bg-success ">
-					<div class="card-body">
-						<i class="fas fa-envelope"></i>
-						<h2 class="text-light m-0">Lorem Ipsum</h2>
-						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-4">
-				<div class="card bg-danger ">
-					<div class="card-body">
-						<i class="fas fa-car"></i>
-						<h2 class="text-light m-0">Lorem Ipsum</h2>
-						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-4">
-				<div class="card bg-primary ">
-					<div class="card-body">
-						<i class="fas fa-play"></i>
-						<h2 class="text-light m-0">Lorem Ipsum</h2>
-						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row mt-3">
-			<div class="col-lg-4 col-md-4">
-				<div class="card bg-info ">
-					<div class="card-body">
-						<i class="fas fa-cart-plus"></i>
-						<h2 class="text-light m-0">Lorem Ipsum</h2>
-						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-4">
-				<div class="card bg-primary ">
-					<div class="card-body">
-						<i class="fas fa-tree"></i>
-						<h2 class="text-light m-0">Lorem Ipsum</h2>
-						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-4">
-				<div class="card bg-success ">
-					<div class="card-body">
-						<i class="fas fa-history"></i>
-						<h2 class="text-light m-0">Lorem Ipsum</h2>
-						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- About Services Section End-->
+	<!-- About Section Start -->
+	<section id="about" class="text-center py-5 text-light">
+		<div class="inner-overlay">
+			<div class="container">
+				<div class="row">
+					<div class="col mt-5 pt-4">
+						<h1 class="text-light">Who can join?</h1>
+						<p class="lead">
+							We warmly <u>welcome everyone!</u> From players who have never played before to those with some years of
+							experience. It does not matter to us. Because at Foot and Ball Academy self-improvement is a player’s
+							primary challenge.
+						<p><em>“How good you were yesterday is yesterday’s achievement. Not todays.” </em></p>
 
-<!-- About Testimonial Section Start -->
-<section id="about-testimonial" class="py-5">
-	
-</section>
-<!-- About Testimonial Section End -->
-
-<!-- Footer Section Start -->
-<footer id="footer" class="py-3 text-center text-light">
-	<div class="container">
-		<div class="row">
-			<div class="col">
-				<h2 class="display-5 mb-0 text-light">Glozzome</h2>
-				<div class="d-flex flex-row justify-content-center p-3">
-					<div class="px-5">
-						<a href="#">
-							<i class="fab fa-facebook-f"></i>
-						</a>
-					</div>
-					<div class="px-5">
-						<a href="#">
-							<i class="fab fa-linkedin-in"></i>
-						</a>
-					</div>
-					<div class="px-5">
-						<a href="#">
-							<i class="fab fa-twitter"></i>
-						</a>
+						</p>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col">
-				Glozzome.com © 2019 All Rights Reserved by MrhRifat
-			</div>
-		</div>
-	</div>
-</footer>
+	</section>
+	<!-- About Section End -->
 
-<script type="text/javascript" src="js/jquery-slim.min.js"></script>
-<script type="text/javascript" src="js/popper.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/uikit.min.js"></script>
-<script type="text/javascript" src="js/uikit-icons.min.js"></script>
+	<!-- Info Section Start -->
+	<section id="about-info" class="py-5 my-5">
+		<div class="container">
+			<div class="row">
+
+				<div class="col-lg-6 col-md-6 align-self-center text-center">
+					<img src="img/kids3.jpg" class="img-fluid w-50 h-70 ">
+				</div>
+
+				<div class="col-lg-6 col-md-6  align-self-center">
+					<h1 class="text-dark">The Technical Component</h1>
+					<h3 class="text-dark">'Toolbox' Concept.</h3>
+					<p class="lead">
+						We help players understand they want to build a strong technical ‘toolbox.’ Each key part of their
+						body e.g., feet, thighs, chest, and head can be thought of as a ‘tool’ to help them control the ball.
+						This incentivises them to develop as many ‘tools’ as possible, helping to problem solve during a
+						game. For example, outside left foot, inside left foot, laces of the left foot, soul, or studs of the left
+						foot. Alone, that is four tools from just one foot!
+					</p>
+
+				</div>
+
+				<div class="row">
+
+					<div class="col-lg-6 col-md-6 align-self-center text-center">
+						<img src="img/kids3.jpg" class="img-fluid w-50 h-70 ">
+					</div>
+
+					<div class="col-lg-6 col-md-6  align-self-center">
+						<h2 class="text-dark">Session Guidelines</h2>
+						<p class="lead">As a brand-new Academy, you might want to know how we will generally approach a session.
+							Below is a guideline for most** sessions for players between the ages of ~5 – 12-year-olds:</p>
+
+						<h3 class="text-dark">The Warmup:</h3>
+						<p class="lead">
+							A classic. Focuses on getting the players active and excited, ready to digest the core message of the
+							session e.g., passing or dribbling, etc.</p>
+						<p>
+							Duration: ~5 minutes
+						</p>
+
+						<h3 class="text-dark">Ball Mastery:</h3>
+						<p class="lead">
+							This is a staple of Foot and Ball Academy. A series of player-and- their-ball manipulation exercises.
+							Designed to strengthen the players personal understanding of how they can or might choose to
+							move a ball around. E.g., soul taps, toe taps, etc.</p>
+						<p>
+							Duration: ~10 minutes
+						</p>
+
+						<h3 class="text-dark">Fast Feet:</h3>
+						<p class="lead">
+							This portion of the session is designed to improve the fast feet response of a player. Unopposed
+							coordination work. This section does not last long but gets the heart rate up! It involves popular
+							tools such as the agility ladder, fast feet through cones, and short sprints (less than 5 m).</p>
+						<p>
+							Duration: ~5-10 minutes
+						</p>
+
+						<h3 class="text-dark">Session theme:</h3>
+						<p class="lead">
+							Is the focus of the week: passing? Dribbling? Extended Ball Mastery? 1 v 1s? Whatever it may be this
+							segment of the session delivers a fun, inclusive set of exercises designed to drive home the key
+							message of that week’s focus.</p>
+						<p>
+							Duration: ~15 minutes
+						</p>
+
+						<h3 class="text-dark">The 1 v 1 duels:</h3>
+						<p class="lead">
+							A very small, 1 on 1 style game. Two small goals. No long shots allowed. No Goalkeepers allowed.
+							This concluding aspect of a session allows the players to express themselves and the ideas they have
+							learnt or have been learning over previous sessions in a game-like environment. Scorelines are only
+							temporarily kept, incentivizing effort. The purpose of the duel is to allow the player access to
+							something resembling a real game, without the added pressure. The desired outcome is
+							improvement where it matters most, playing!</p>
+						<p>
+							Duration: always the remainder of a session!
+						</p>
+						<p>**note: This session guideline is subject to variation, deviation and change if the coach deems it
+							necessary.</p>
+
+					</div>
+
+				</div>
+			</div>
+	</section>
+	<!-- About Info Section End -->
+
+	<!-- Info Section Start -->
+	<section id="about-info" class="py-5 my-5">
+		<div class="container">
+			<div class="row">
+
+
+
+				<div class="col-lg-6 col-md-6  align-self-center">
+					<h1 class="text-dark">The Mental Component</h1>
+					<p class="lead">
+						Often overlooked by society, a sustainable mindset towards playing football is a crucial component
+						of our philosophy at Foot and Ball Academy. That is:
+					</p>
+					<p><em>“First and foremost, calmness and composure on the ball.”</em></p>
+					<p>Too often kids’ games are overrun by an over enthusiastic crowd, creating a stressful environment,
+						and thus a very subtle, game-related ‘panic’ from the young players.</p>
+					<p><em>“Panic is a young player’s first hurdle to overcome in football.”</em></p>
+					<p>This very mild ‘panic’ typically expresses itself in subtle ways. Not obvious to the inexperienced.
+						Examples include:</p>
+
+					<ol type="1">
+						<li>Hiding from the ball during the game.</li>
+						<li>Suddenly kicking the ball away at the sound of the crowd yelling.</li>
+						<li>Overwhelmed when under pressure from an opponent and kicking the ball away.</li>
+						<li>Easily distracted during a game.</li>
+					</ol>
+
+					<p>The primary approach we use to overcome this is a simple ideological substitution. We replace the
+						concept of <em>winning</em> with that of <em>improving</em>. By doing this, we alter the players mental
+						incentives
+						when playing. With no leagues or ladders or tables, the player is freed up to focus on their personal
+						player improvement.</p>
+
+					<p>**note: we regularly keep scorelines of activities, exercises, and little games throughout a session.
+						Scores are not recorded or kept beyond that segment of the session. They are not celebrated at the
+						end of it, either. Rather they are used as a gentle, subtle reminder that the goal of the game, long-
+						term, is to score.</p>
+
+				</div>
+
+				<div class="col-lg-6 col-md-6 align-self-center text-center">
+					<img src="img/kidschill.jpg" class="img-fluid w-50 h-70 ">
+				</div>
+
+				<div class="row">
+
+					<div class="col-lg-6 col-md-6 align-self-center text-center">
+						<img src="img/football4.jpg" class="img-fluid w-50 h-70 ">
+					</div>
+
+					<div class="col-lg-6 col-md-6  align-self-center">
+						<h1 class="text-dark">Time</h1>
+						<p class="lead">There is ongoing debate over the best approach to developing young players in Australia. One
+							aspect
+							of the debate that is often neglected is the importance of valuing time.</p>
+
+						<p>
+							It is undeniable, one of the lures of the World’s game is its ‘tricky’ nature. The challenges of football
+							can only be mastered by one who aims to play with confidence, calmness, and a healthy sense of
+							freedom on the field. For that reason, lots of time is required to give young players every chance to
+							improve themselves to a level they feel resembles that, with the aim of making the dynamism and
+							challenges of the game more enjoyable later in life.
+						</p>
+
+						<p>
+							At Foot and Ball Academy, respecting the value of time is a foundation of our teaching philosophy.
+							Too often, time is wasted, leading to bad habits. From arriving late to sessions, to the hasty
+							introduction of in-game management e.g., kicking the ball out under “pressure.” For this reason, we
+							not only stress the importance of punctually, but that every player always feels encouraged to make
+							constructive mistakes during a session. i.e., taking risk over ‘safe play.’
+						</p>
+
+						<p><em>“I would rather see a young player try something they just learnt, make a mistake with it, and
+								concede a goal, versus panicking, then booting the ball away, whilst feeling that sense of strategic
+								safety. It’s too young for any of that. Leave strategy for later in their life.”</em></p>
+
+					</div>
+
+				</div>
+			</div>
+	</section>
+	<!-- About Info Section End -->
+
+
+
+	<script type="text/javascript" src="js/jquery-slim.min.js"></script>
+	<script type="text/javascript" src="js/popper.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/uikit.min.js"></script>
+	<script type="text/javascript" src="js/uikit-icons.min.js"></script>
 </body>
+
 </html>
