--- a/Staff.html
+++ b/Staff.html
@@ -1,72 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<title>Glozzome</title>
+
 	<meta charset="utf-8">
-	<meta name="viewport" content="width:device-width; initial-scale=1.0">
+	<meta name="viewport" content="width=device-width; initial-scale=1.0">
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="css/uikit.min.css"> 
+	<link rel="stylesheet" type="text/css" href="css/uikit.min.css">
 	<link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.css">
-
+	<title>Foot and Ball Academy</title>
 </head>
+
 <body>
 
-		<!-- Navbar Section Start -->
+	<!-- Navbar Section Start -->
 	<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4274AD;"
-	uk-sticky="top:100; animation: uk-animation-slide-top; bottom: #sticky-on-scroll-up">
-	<div class="container">
-		<a href="index.html" class="navbar-brand">
-			<img src="./img/logo.png" class="img-fluid p-0" style="height: 40px; ">
-			<!-- <div class="ml-2 p-0 d-inline webT">Glozzome</div> -->
-		</a>
-		<button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navBar">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navBar">
-			<ul class="navbar-nav  ml-auto ">
+		uk-sticky="top:100; animation: uk-animation-slide-top; bottom: #sticky-on-scroll-up">
+		<div class="container">
+			<a href="index.html" class="navbar-brand">
+				<img src="./img/logo.png" class="img-fluid p-0" style="height: 40px; ">
+				<!-- <div class="ml-2 p-0 d-inline webT">Glozzome</div> -->
+			</a>
+			<button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navBar">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navBar">
+				<ul class="navbar-nav  ml-auto ">
 
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Programs
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="SchoolTerms.html">School Terms</a>
-						<a class="dropdown-item" href="PrivateSessions.html">Private Sessions</a>
-						<a class="dropdown-item" href="RegisterNow.html">Register Now</a>
-					</div>
-				</li>
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						About Us
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="Location.html">Location</a>
-						<a class="dropdown-item" href="OurPhilosopy.html">Our Philosophy</a>
-						<a class="dropdown-item" href="Staff.html">Staff</a>
-					</div>
-				</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Programs
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="SchoolTerms.html">School Terms</a>
+							<a class="dropdown-item" href="PrivateSessions.html">Private Sessions</a>
+							<a class="dropdown-item" href="RegisterNow.html">Register Now</a>
+						</div>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							About Us
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="Location.html">Location</a>
+							<a class="dropdown-item" href="OurPhilosophy.html">Our Philosophy</a>
+							<a class="dropdown-item" href="Staff.html">Staff</a>
+						</div>
+					</li>
 
-				<li class="nav-item">
-					<a class="nav-link" href="News.html">News</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="ContactUs.html">Contact Us</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="TOS.html">Terms and Conditions</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" style="text-shadow: 2px 2px 2px #08e0f8;" href="RegisterNow.html"><b>Register Now</b></a>
-				</li>
-			</ul>
+					<li class="nav-item">
+						<a class="nav-link" href="News.html">News</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="ContactUs.html">Contact Us</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="TOS.html">Terms and Conditions</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" style="text-shadow: 2px 2px 2px #08e0f8;" href="RegisterNow.html"><b>Register Now</b></a>
+					</li>
+				</ul>
+			</div>
 		</div>
-	</div>
-</nav>
-<!-- Nav Section End -->
+	</nav>
+	<!-- Nav Section End -->
 
 	
 	<!-- About Section Start -->
