--- a/SchoolTerms.html
+++ b/SchoolTerms.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<title>Glozzome</title>
+
 	<meta charset="utf-8">
-	<meta name="viewport" content="width:device-width; initial-scale=1.0">
+	<meta name="viewport" content="width=device-width; initial-scale=1.0">
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="css/uikit.min.css"> 
+	<link rel="stylesheet" type="text/css" href="css/uikit.min.css">
 	<link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.css">
-
+	<title>Foot and Ball Academy</title>
 </head>
+
 <body>
 
-		<!-- Navbar Section Start -->
-		<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4274AD;"
+	<!-- Navbar Section Start -->
+	<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4274AD;"
 		uk-sticky="top:100; animation: uk-animation-slide-top; bottom: #sticky-on-scroll-up">
 		<div class="container">
 			<a href="index.html" class="navbar-brand">
@@ -45,7 +47,7 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="Location.html">Location</a>
-							<a class="dropdown-item" href="OurPhilosopy.html">Our Philosophy</a>
+							<a class="dropdown-item" href="OurPhilosophy.html">Our Philosophy</a>
 							<a class="dropdown-item" href="Staff.html">Staff</a>
 						</div>
 					</li>
@@ -58,6 +60,9 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="TOS.html">Terms and Conditions</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" style="text-shadow: 2px 2px 2px #08e0f8;" href="RegisterNow.html"><b>Register Now</b></a>
 					</li>
 				</ul>
 			</div>
