--- a/TOS.html
+++ b/TOS.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<title>Glozzome</title>
+
 	<meta charset="utf-8">
-	<meta name="viewport" content="width:device-width; initial-scale=1.0">
+	<meta name="viewport" content="width=device-width; initial-scale=1.0">
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="css/uikit.min.css"> 
+	<link rel="stylesheet" type="text/css" href="css/uikit.min.css">
 	<link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.css">
-
+	<title>Foot and Ball Academy</title>
 </head>
+
 <body>
 
-		<!-- Navbar Section Start -->
-		<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4274AD;"
+	<!-- Navbar Section Start -->
+	<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4274AD;"
 		uk-sticky="top:100; animation: uk-animation-slide-top; bottom: #sticky-on-scroll-up">
 		<div class="container">
 			<a href="index.html" class="navbar-brand">
@@ -45,7 +47,7 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="Location.html">Location</a>
-							<a class="dropdown-item" href="OurPhilosopy.html">Our Philosophy</a>
+							<a class="dropdown-item" href="OurPhilosophy.html">Our Philosophy</a>
 							<a class="dropdown-item" href="Staff.html">Staff</a>
 						</div>
 					</li>
@@ -58,6 +60,9 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="TOS.html">Terms and Conditions</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" style="text-shadow: 2px 2px 2px #08e0f8;" href="RegisterNow.html"><b>Register Now</b></a>
 					</li>
 				</ul>
 			</div>
@@ -105,110 +110,6 @@
 	</section>
 	<!-- About Info Section End -->
 
-	<!-- About Services Section Start -->
-	<section id="about-services" class="py-5 text-light
-	text-center bg-dark">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-4 col-md-4">
-				<div class="card bg-success ">
-					<div class="card-body">
-						<i class="fas fa-envelope"></i>
-						<h2 class="text-light m-0">Lorem Ipsum</h2>
-						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-4">
-				<div class="card bg-danger ">
-					<div class="card-body">
-						<i class="fas fa-car"></i>
-						<h2 class="text-light m-0">Lorem Ipsum</h2>
-						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-4">
-				<div class="card bg-primary ">
-					<div class="card-body">
-						<i class="fas fa-play"></i>
-						<h2 class="text-light m-0">Lorem Ipsum</h2>
-						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row mt-3">
-			<div class="col-lg-4 col-md-4">
-				<div class="card bg-info ">
-					<div class="card-body">
-						<i class="fas fa-cart-plus"></i>
-						<h2 class="text-light m-0">Lorem Ipsum</h2>
-						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-4">
-				<div class="card bg-primary ">
-					<div class="card-body">
-						<i class="fas fa-tree"></i>
-						<h2 class="text-light m-0">Lorem Ipsum</h2>
-						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-4">
-				<div class="card bg-success ">
-					<div class="card-body">
-						<i class="fas fa-history"></i>
-						<h2 class="text-light m-0">Lorem Ipsum</h2>
-						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- About Services Section End-->
-
-<!-- About Testimonial Section Start -->
-<section id="about-testimonial" class="py-5">
-	
-</section>
-<!-- About Testimonial Section End -->
-
-<!-- Footer Section Start -->
-<footer id="footer" class="py-3 text-center text-light">
-	<div class="container">
-		<div class="row">
-			<div class="col">
-				<h2 class="display-5 mb-0 text-light">Glozzome</h2>
-				<div class="d-flex flex-row justify-content-center p-3">
-					<div class="px-5">
-						<a href="#">
-							<i class="fab fa-facebook-f"></i>
-						</a>
-					</div>
-					<div class="px-5">
-						<a href="#">
-							<i class="fab fa-linkedin-in"></i>
-						</a>
-					</div>
-					<div class="px-5">
-						<a href="#">
-							<i class="fab fa-twitter"></i>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				Glozzome.com © 2019 All Rights Reserved by MrhRifat
-			</div>
-		</div>
-	</div>
-</footer>
 
 <script type="text/javascript" src="js/jquery-slim.min.js"></script>
 <script type="text/javascript" src="js/popper.min.js"></script>
