--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		uk-sticky="top:100; animation: uk-animation-slide-top; bottom: #sticky-on-scroll-up">
 		<div class="container">
 			<a href="index.html" class="navbar-brand">
-				<img src="./img/logo.png" class="img-fluid p-0" style="height: 40px; ">
+				<img src="./img/logo-long.png" class="img-fluid p-0" style="height: 40px; ">
 				<!-- <div class="ml-2 p-0 d-inline webT">Glozzome</div> -->
 			</a>
 			<button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navBar">
@@ -47,7 +47,7 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="Location.html">Location</a>
-							<a class="dropdown-item" href="OurPhilosopy.html">Our Philosophy</a>
+							<a class="dropdown-item" href="OurPhilosophy.html">Our Philosophy</a>
 							<a class="dropdown-item" href="Staff.html">Staff</a>
 						</div>
 					</li>
